get hot-loading style and router

--- a/components/navbar/navbar.slim
+++ b/components/navbar/navbar.slim
@@ -1,2 +1,7 @@
-ul
-  li hello nav
+ul#navbar
+  li
+    router-link to='/' home
+  li
+    router-link to='about' about
+  li
+    router-link to='contact' contact
