--- a/components/authenticator/authenticator.slim
+++ b/components/authenticator/authenticator.slim
@@ -1,5 +1,6 @@
 div#authenticator
   div v-if='done'
     b logged in as {{ username }}
+    button @click='logout' logout
   div v-else-if='token' 
     a @click='open_in_new_tab' :href='authenticate_url' login with github
