--- a/client/components/authenticator/authenticator.slim
+++ b/client/components/authenticator/authenticator.slim
@@ -2,5 +2,7 @@ div#authenticator
   div v-if='done'
     b logged in as {{ username }}
     button @click='logout' logout
+    br
+    button @click='logout_all_devices' logout all devices
   div v-else-if='token' 
     a @click='open_in_new_tab' :href='authenticate_url' login with github
