add list of todos

--- a/client/components/authenticator/authenticator.slim
+++ b/client/components/authenticator/authenticator.slim
@@ -1,5 +1,5 @@
 div#authenticator
-  div v-if='done'
+  div v-if='logged_in'
     b logged in as {{ username }}
     button @click='logout' logout
     br
