--- a/client/style/app.sass
+++ b/client/style/app.sass
@@ -1,3 +1,11 @@
 body
-  // background-color: white
-  // color: red
+  height: 100%
+  width 100%
+
+#notices
+  color: green
+#notices > #errors
+  color: red
+
+input[type='text']
+  min-width: 500px
