configure front end for production

--- a/client/components/root/root.slim
+++ b/client/components/root/root.slim
@@ -1,3 +1,12 @@
 div#home
+
+  h5
+   | this is a shared list of todos - everyone can see these, but only logged in 
+   | users can create/update/destroy
+
+  h4
+    a href='http://github.com/maxpleaner/vue-sinatra-boiler' source code
+
   navbar
+
   router-view
